--- a/Crane/Properties/Resource.resx
+++ b/Crane/Properties/Resource.resx
@@ -187,6 +187,24 @@
   <data name="glue_vertices" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\glue_vertices.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icons_compute_solution_space_dof" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\ai\icons_compute_solution_space_dof.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons_interactive_solver" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\ai\icons_interactive_solver.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons_miura" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\ai\icons_miura.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons_static_solver" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\ai\icons_static_solver.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons_waterbomb" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\ai\icons_waterbomb.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons_yoshimura" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Icons\ai\icons_yoshimura.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="miura" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons\miura.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
